TestSuite/PascalABCTests/errors/err0317.pas
begin
  Writeln(1 mod 0);
end.